feat(coverage): Added code coverage

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "build": "vite build",
     "serve": "vite preview",
     "test": "jest --watchAll --verbose",
+    "coverage": "jest --coverage",
     "e2e": "cypress open"
   },
   "devDependencies": {
