--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "e2e": "cypress open"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.23",
-    "cypress": "^7.4.0",
-    "jest": "^27.0.3",
-    "vite": "^2.3.5"
+    "@types/jest": "^29.4.0",
+    "cypress": "^12.7.0",
+    "vite": "^4.1.0",
+    "jest": "^29.5.0"
   }
 }
